--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,41 @@
 <resources>
     <string name="app_name">What Now!</string>
+    <string name="lottie_url">https://lottie.host/58e6c622-ae8a-476d-ace8-9d5bcd82e30e/FwOA9dmLpR.json</string>
+    <string-array name="countries_array">
+        <item>Select a country</item>
+        <item>Argentina</item>
+        <item>Australia</item>
+        <item>Austria</item>
+        <item>Belgium</item>
+        <item>Brazil</item>
+        <item>Canada</item>
+        <item>China</item>
+        <item>Egypt</item>
+        <item>Germany</item>
+        <item>Hungary</item>
+        <item>Italy</item>
+        <item>Japan</item>
+        <item>Malaysia</item>
+        <item>Morocco</item>
+        <item>Norway</item>
+        <item>Poland</item>
+        <item>Russia</item>
+        <item>Saudi_Arabia</item>
+        <item>Singapore</item>
+        <item>Switzerland</item>
+        <item>Turkey</item>
+        <item>UAE</item>
+        <item>United Kingdom</item>
+        <item>USA</item>
+    </string-array>
+    <string-array name="categories_array">
+        <item>Select a category</item>
+        <item>Business</item>
+        <item>Entertainment</item>
+        <item>General</item>
+        <item>Health</item>
+        <item>Science</item>
+        <item>Sports</item>
+        <item>Technology</item>
+    </string-array>
 </resources>
