--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
         <item>Turkey</item>
         <item>UAE</item>
         <item>United Kingdom</item>
-        <item>USA</item>
+        <item>US</item>
     </string-array>
     <string-array name="categories_array">
         <item>Select a category</item>
