--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,19 +55,17 @@
         <item>Chinese</item>
     </string-array>
 
-        <string name="heading_one">Quick &amp; Easy Payments</string>
+        <string name="heading_one">Quick &amp; Daily News</string>
         <string name="heading_two">Instant Notifications</string>
-        <string name="heading_three">Cashless Payment</string>
-        <string name="heading_fourth">Pay Anywhere</string>
 
         //Description
-        <string name="desc_one">Grow your Knoldge By our news app </string>
+        <string name="desc_one">Grow your Knowledge By our news app </string>
 
     <string name="Sp_what_now">What Now</string>
     <string name="Sp_your_news_at_any_time">Your News At Any Time</string>
     <string name="news_image">news_Image</string>
     <string name="dots">...</string>
-    <string name="shareic">shareic</string>
+    <string name="share">share</string>
     <string name="setting_api_1">What are you interested in?</string>
     <string name="setting_api_2">• Categories</string>
     <string name="setting_api_3">• Country</string>
